# pylearn

./: README.md  assignment1.py  data.xlsx  data_python.py  full_data.xlsx  out.csv  pyproject.toml  sqlite_populate.py  tutorial.db
