[tool.poetry]
name = "pylearn"
version = "0.1.0"
description = ""
authors = ["tmtenbrink <T.M.tenBrink@student.tudelft.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
polars = {extras = ["xlsx2csv"], version = "^0.19.2"}
xlsx2csv = "^0.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
